# swe-compass

./: .gitignore  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: blank.yml
analyzer/: es_handler.py  executor.py  planner.py  runner.py
scraper/: es_handler.py  linkedin.json  runner.py
scraper/scraper/: items.py  loaders.py  pipelines.py  settings.py
scraper/scraper/spiders/: glassdoor_spider.py  linkedin_spider.py  quotes_spider.py
