[tool.poetry]
name = "swe-compass"
version = "0.1.0"
description = ""
authors = ["RainrainWu <s0958334772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
elasticsearch = "7.10.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pytest = "6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
